@@ -1,5 +1,5 @@
 name: WedBars
-version: 1.0_b2_u27
+version: 1.0_b2_u36
 main: com.blockhead7360.mc.wedbars.WedBars
 author: Blockhead7360
 description: It's like Bed Wars on Hypixel but better I swear
